--- a/package.json
+++ b/package.json
@@ -3,7 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
+    "massive": "^5.7.7",
+    "node-sass-chokidar": "^1.3.4",
+    "passport": "^0.4.0",
+    "passport-auth0": "^1.1.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-router-dom": "^5.0.0",
